# bpe-docker-to-openwrt

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/bpe_docker_to_openwrt/: RouterObject.py  __about__.py  main.py
tests/: RouterObject_test.py  __init__.py  main_test.py
